--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,20 @@ ExportedObj/
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
 
+# FMOD
+*/Assets/FMODStudioCache.asset
+*/Assets/FMODStudioCache.asset.meta
+*/fmod.log
+*/fmod_editor.log
+
+# FMOD studio (In folder FMOD)
+*/FMOD/**.user
+*/FMOD/**.unsaved
+*/FMOD/**.cache
+*/FMOD/**.restore
+
+
+
 # Builds
 *.apk
 *.unitypackage
